Fix search bar clear button, fix search alignment, distribute filters

--- a/src/components/views/PolicyPage/ListPoliciesPage/PolicyFilterBar/PolicyFilters.module.scss
+++ b/src/components/views/PolicyPage/ListPoliciesPage/PolicyFilterBar/PolicyFilters.module.scss
@@ -13,8 +13,9 @@
   }
 
   .filterBar {
-    display: flex;
     margin-bottom: 1rem;
+    display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
   }
 }
