--- a/src/components/views/PolicyPage/ListPoliciesPage/PolicyFilterBar/SearchControl/SearchControl.module.scss
+++ b/src/components/views/PolicyPage/ListPoliciesPage/PolicyFilterBar/SearchControl/SearchControl.module.scss
@@ -1,8 +1,9 @@
 .searchControl {
   margin: 0;
-  margin-top: 0.75rem;
-  margin-left: auto;
+  // margin-top: 0.75rem;
+  // margin-left: auto;
   position: relative;
+  margin-top: 2.5em;
 
   input {
     padding: 4px 8px;
